--- a/Elikem_Danku.html
+++ b/Elikem_Danku.html
@@ -24,7 +24,7 @@
             
          <dt>Ghana</dt>
 
-           <dd>Adenta - Accra</dd>
+           <dd>Accra - Accra</dd>
             <dd>Tishegu - Tamale</dd>
             <dd>Santasi- Kumasi</dd>
 
